WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43389
Fix plug-in test failures and remove tests from the Skipped list
https://bugs.webkit.org/show_bug.cgi?id=43389
Summary
Fix plug-in test failures and remove tests from the Skipped list
Anders Carlsson
Reported
2010-08-02 16:25:12 PDT
Fix plug-in test failures and remove tests from the Skipped list
Attachments
Patch
(15.92 KB, patch)
2010-08-02 16:27 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-08-02 16:27:58 PDT
Created
attachment 63274
[details]
Patch
Anders Carlsson
Comment 2
2010-08-02 16:42:21 PDT
Committed
r64504
: <
http://trac.webkit.org/changeset/64504
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug