Fix plug-in test failures and remove tests from the Skipped list https://bugs.webkit.org/show_bug.cgi?id=43389

Reviewed by Sam Weinig.

WebCore:

* WebCore.exp.in:
Export FrameLoader::cancelledError.

WebKit2:

* WebProcess/Plugins/JSNPMethod.cpp:
JSNPMethod::s_info should specify InternalFunction::info as its parent.

* WebProcess/Plugins/Netscape/NetscapePlugin.cpp:
(WebKit::NetscapePlugin::cancelStreamLoad):
Special-case the manual stream and call PluginController::cancelManualStreamLoad.

* WebProcess/Plugins/Netscape/NetscapePluginStream.cpp:
(WebKit::NetscapePluginStream::stop):
It's OK to call stop on a stream that hasn't been started. Remove assertion and return early.

* WebProcess/Plugins/PluginController.h:
Add cancelManualStreamLoad.

* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::cancelManualStreamLoad):
Tell the document loader to cancel the main resource load.

* WebProcess/WebPage/WebFrame.cpp:
(WebKit::WebFrame::innerText):
Check for a null document element.

LayoutTests:

* platform/mac-wk2/Skipped:
Move plug-in tests that now fail due to lack of functionality out into appropriate sections.

Canonical link: https://commits.webkit.org/55326@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64504 268f45cc-cd09-0410-ab3c-d52691b4dbfc