WebKit2/WebProcess/Plugins/PluginView.h
@@ -108,6 +108,7 @@ private:
     virtual void loadURL(uint64_t requestID, const WebCore::String& method, const WebCore::String& urlString, const WebCore::String& target, 
                          const WebCore::HTTPHeaderMap& headerFields, const Vector<char>& httpBody, bool allowPopups);
     virtual void cancelStreamLoad(uint64_t streamID);
+    virtual void cancelManualStreamLoad();
     virtual NPObject* windowScriptNPObject();
     virtual NPObject* pluginElementNPObject();
     virtual bool evaluate(NPObject*, const WebCore::String&scriptString, NPVariant* result, bool allowPopups);
