WebKit2/WebProcess/WebPage/WebFrame.cpp
@@ -190,6 +190,9 @@ String WebFrame::innerText() const
     if (!m_coreFrame)
         return String();
 
+    if (!m_coreFrame->document()->documentElement())
+        return String();
+
     return m_coreFrame->document()->documentElement()->innerText();
 }
 
